// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectionAlert renders correctly 1`] = `
<SelectionAlert
  loggedInAnonymously={true}
  marginSide="4px"
  navigateToSelection={[Function]}
  selectedItems={
    Array [
      Object {
        "entityId": 1,
        "entityType": "investigation",
        "id": 1,
        "name": "Test",
        "parentEntities": Array [],
      },
    ]
  }
  width="100px"
>
  <Styled(ForwardRef(Paper))
    animating={true}
    aria-label="selection-alert"
    onAnimationEnd={[Function]}
    props={
      Object {
        "loggedInAnonymously": true,
        "marginSide": "4px",
        "navigateToSelection": [Function],
        "selectedItems": Array [
          Object {
            "entityId": 1,
            "entityType": "investigation",
            "id": 1,
            "name": "Test",
            "parentEntities": Array [],
          },
        ],
        "width": "100px",
      }
    }
  >
    <Noop />
    <ForwardRef(Paper)
      aria-label="selection-alert"
      className="css-mrknuz"
      onAnimationEnd={[Function]}
    >
      <MuiPaperRoot
        aria-label="selection-alert"
        as="div"
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-mrknuz"
        onAnimationEnd={[Function]}
        ownerState={
          Object {
            "aria-label": "selection-alert",
            "children": <ForwardRef(Grid)
              container={true}
            >
              <ForwardRef(Grid)
                item={true}
                sx={
                  Object {
                    "alignItems": "center",
                    "flex": "1",
                    "justifyItems": "center",
                    "textAlign": "center",
                  }
                }
              >
                <ForwardRef(Typography)
                  aria-label="selection-alert-text"
                  display="inline"
                >
                  selec_alert.added
                </ForwardRef(Typography)>
                 
                <button
                  aria-label="selection-alert-link"
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "inherit",
                      "border": "none",
                      "color": "#040091",
                      "cursor": "pointer",
                      "fontFamily": "arial, sans-serif",
                      "fontSize": "14px",
                      "padding": "0!important",
                      "textDecoration": "underline",
                    }
                  }
                >
                  selec_alert.link
                </button>
              </ForwardRef(Grid)>
              <ForwardRef(Grid)
                item={true}
              >
                <ForwardRef(IconButton)
                  aria-label="selection-alert-close"
                  color="inherit"
                  onClick={[Function]}
                  size="small"
                >
                  <Memo
                    fontSize="inherit"
                  />
                </ForwardRef(IconButton)>
              </ForwardRef(Grid)>
            </ForwardRef(Grid)>,
            "className": "css-mrknuz",
            "component": "div",
            "elevation": 1,
            "onAnimationEnd": [Function],
            "square": false,
            "variant": "elevation",
          }
        }
      >
        <Noop />
        <div
          aria-label="selection-alert"
          className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1wxid5k-MuiPaper-root"
          onAnimationEnd={[Function]}
        >
          <ForwardRef(Grid)
            container={true}
          >
            <MuiGridRoot
              as="div"
              className="MuiGrid-root MuiGrid-container"
              ownerState={
                Object {
                  "children": Array [
                    <ForwardRef(Grid)
                      item={true}
                      sx={
                        Object {
                          "alignItems": "center",
                          "flex": "1",
                          "justifyItems": "center",
                          "textAlign": "center",
                        }
                      }
                    >
                      <ForwardRef(Typography)
                        aria-label="selection-alert-text"
                        display="inline"
                      >
                        selec_alert.added
                      </ForwardRef(Typography)>
                       
                      <button
                        aria-label="selection-alert-link"
                        onClick={[Function]}
                        style={
                          Object {
                            "background": "inherit",
                            "border": "none",
                            "color": "#040091",
                            "cursor": "pointer",
                            "fontFamily": "arial, sans-serif",
                            "fontSize": "14px",
                            "padding": "0!important",
                            "textDecoration": "underline",
                          }
                        }
                      >
                        selec_alert.link
                      </button>
                    </ForwardRef(Grid)>,
                    <ForwardRef(Grid)
                      item={true}
                    >
                      <ForwardRef(IconButton)
                        aria-label="selection-alert-close"
                        color="inherit"
                        onClick={[Function]}
                        size="small"
                      >
                        <Memo
                          fontSize="inherit"
                        />
                      </ForwardRef(IconButton)>
                    </ForwardRef(Grid)>,
                  ],
                  "columnSpacing": 0,
                  "columns": 12,
                  "container": true,
                  "direction": "row",
                  "item": false,
                  "lg": false,
                  "md": false,
                  "rowSpacing": 0,
                  "sm": false,
                  "sx": Object {},
                  "wrap": "wrap",
                  "xl": false,
                  "xs": false,
                  "zeroMinWidth": false,
                }
              }
              sx={Object {}}
            >
              <Noop />
              <div
                className="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
              >
                <ForwardRef(Grid)
                  item={true}
                  sx={
                    Object {
                      "alignItems": "center",
                      "flex": "1",
                      "justifyItems": "center",
                      "textAlign": "center",
                    }
                  }
                >
                  <MuiGridRoot
                    as="div"
                    className="MuiGrid-root MuiGrid-item"
                    ownerState={
                      Object {
                        "children": Array [
                          <ForwardRef(Typography)
                            aria-label="selection-alert-text"
                            display="inline"
                          >
                            selec_alert.added
                          </ForwardRef(Typography)>,
                          " ",
                          <button
                            aria-label="selection-alert-link"
                            onClick={[Function]}
                            style={
                              Object {
                                "background": "inherit",
                                "border": "none",
                                "color": "#040091",
                                "cursor": "pointer",
                                "fontFamily": "arial, sans-serif",
                                "fontSize": "14px",
                                "padding": "0!important",
                                "textDecoration": "underline",
                              }
                            }
                          >
                            selec_alert.link
                          </button>,
                        ],
                        "columnSpacing": 0,
                        "columns": 12,
                        "container": false,
                        "direction": "row",
                        "item": true,
                        "lg": false,
                        "md": false,
                        "rowSpacing": 0,
                        "sm": false,
                        "sx": Object {
                          "alignItems": "center",
                          "flex": "1",
                          "justifyItems": "center",
                          "textAlign": "center",
                        },
                        "wrap": "wrap",
                        "xl": false,
                        "xs": false,
                        "zeroMinWidth": false,
                      }
                    }
                    sx={
                      Object {
                        "alignItems": "center",
                        "flex": "1",
                        "justifyItems": "center",
                        "textAlign": "center",
                      }
                    }
                  >
                    <Noop />
                    <div
                      className="MuiGrid-root MuiGrid-item css-prmyfw-MuiGrid-root"
                    >
                      <ForwardRef(Typography)
                        aria-label="selection-alert-text"
                        display="inline"
                      >
                        <MuiTypographyRoot
                          aria-label="selection-alert-text"
                          as="p"
                          className="MuiTypography-root MuiTypography-body1"
                          ownerState={
                            Object {
                              "align": "inherit",
                              "aria-label": "selection-alert-text",
                              "children": "selec_alert.added",
                              "className": undefined,
                              "color": undefined,
                              "component": undefined,
                              "gutterBottom": false,
                              "noWrap": false,
                              "paragraph": false,
                              "sx": Object {
                                "color": undefined,
                                "display": "inline",
                              },
                              "variant": "body1",
                              "variantMapping": Object {
                                "body1": "p",
                                "body2": "p",
                                "h1": "h1",
                                "h2": "h2",
                                "h3": "h3",
                                "h4": "h4",
                                "h5": "h5",
                                "h6": "h6",
                                "inherit": "p",
                                "subtitle1": "h6",
                                "subtitle2": "h6",
                              },
                            }
                          }
                          sx={
                            Object {
                              "color": undefined,
                              "display": "inline",
                            }
                          }
                        >
                          <Noop />
                          <p
                            aria-label="selection-alert-text"
                            className="MuiTypography-root MuiTypography-body1 css-1sx1eu0-MuiTypography-root"
                          >
                            selec_alert.added
                          </p>
                        </MuiTypographyRoot>
                      </ForwardRef(Typography)>
                       
                      <button
                        aria-label="selection-alert-link"
                        onClick={[Function]}
                        style={
                          Object {
                            "background": "inherit",
                            "border": "none",
                            "color": "#040091",
                            "cursor": "pointer",
                            "fontFamily": "arial, sans-serif",
                            "fontSize": "14px",
                            "padding": "0!important",
                            "textDecoration": "underline",
                          }
                        }
                      >
                        selec_alert.link
                      </button>
                    </div>
                  </MuiGridRoot>
                </ForwardRef(Grid)>
                <ForwardRef(Grid)
                  item={true}
                >
                  <MuiGridRoot
                    as="div"
                    className="MuiGrid-root MuiGrid-item"
                    ownerState={
                      Object {
                        "children": <ForwardRef(IconButton)
                          aria-label="selection-alert-close"
                          color="inherit"
                          onClick={[Function]}
                          size="small"
                        >
                          <Memo
                            fontSize="inherit"
                          />
                        </ForwardRef(IconButton)>,
                        "columnSpacing": 0,
                        "columns": 12,
                        "container": false,
                        "direction": "row",
                        "item": true,
                        "lg": false,
                        "md": false,
                        "rowSpacing": 0,
                        "sm": false,
                        "sx": Object {},
                        "wrap": "wrap",
                        "xl": false,
                        "xs": false,
                        "zeroMinWidth": false,
                      }
                    }
                    sx={Object {}}
                  >
                    <Noop />
                    <div
                      className="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                    >
                      <ForwardRef(IconButton)
                        aria-label="selection-alert-close"
                        color="inherit"
                        onClick={[Function]}
                        size="small"
                      >
                        <MuiIconButtonRoot
                          aria-label="selection-alert-close"
                          centerRipple={true}
                          className="MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall"
                          disabled={false}
                          focusRipple={true}
                          onClick={[Function]}
                          ownerState={
                            Object {
                              "aria-label": "selection-alert-close",
                              "children": <Memo
                                fontSize="inherit"
                              />,
                              "color": "inherit",
                              "disableFocusRipple": false,
                              "disabled": false,
                              "edge": false,
                              "onClick": [Function],
                              "size": "small",
                            }
                          }
                        >
                          <Noop />
                          <ForwardRef(ButtonBase)
                            aria-label="selection-alert-close"
                            centerRipple={true}
                            className="MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall css-8mu34q-MuiIconButton-root"
                            disabled={false}
                            focusRipple={true}
                            onClick={[Function]}
                          >
                            <MuiButtonBaseRoot
                              aria-label="selection-alert-close"
                              as="button"
                              className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall css-8mu34q-MuiIconButton-root"
                              disabled={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onContextMenu={[Function]}
                              onDragLeave={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseLeave={[Function]}
                              onMouseUp={[Function]}
                              onTouchEnd={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              ownerState={
                                Object {
                                  "aria-label": "selection-alert-close",
                                  "centerRipple": true,
                                  "children": <Memo
                                    fontSize="inherit"
                                  />,
                                  "className": "MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall css-8mu34q-MuiIconButton-root",
                                  "component": "button",
                                  "disableRipple": false,
                                  "disableTouchRipple": false,
                                  "disabled": false,
                                  "focusRipple": true,
                                  "focusVisible": false,
                                  "onClick": [Function],
                                  "tabIndex": 0,
                                }
                              }
                              tabIndex={0}
                              type="button"
                            >
                              <Noop />
                              <button
                                aria-label="selection-alert-close"
                                className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall css-1e0d89p-MuiButtonBase-root-MuiIconButton-root"
                                disabled={false}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onContextMenu={[Function]}
                                onDragLeave={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                onKeyUp={[Function]}
                                onMouseDown={[Function]}
                                onMouseLeave={[Function]}
                                onMouseUp={[Function]}
                                onTouchEnd={[Function]}
                                onTouchMove={[Function]}
                                onTouchStart={[Function]}
                                tabIndex={0}
                                type="button"
                              >
                                <ForwardRef(CloseIcon)
                                  fontSize="inherit"
                                >
                                  <ForwardRef(SvgIcon)
                                    data-testid="CloseIcon"
                                    fontSize="inherit"
                                  >
                                    <MuiSvgIconRoot
                                      aria-hidden={true}
                                      as="svg"
                                      className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                                      data-testid="CloseIcon"
                                      focusable="false"
                                      ownerState={
                                        Object {
                                          "children": <path
                                            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                                          />,
                                          "color": "inherit",
                                          "component": "svg",
                                          "data-testid": "CloseIcon",
                                          "fontSize": "inherit",
                                          "inheritViewBox": false,
                                          "viewBox": "0 0 24 24",
                                        }
                                      }
                                      viewBox="0 0 24 24"
                                    >
                                      <Noop />
                                      <svg
                                        aria-hidden={true}
                                        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                                        data-testid="CloseIcon"
                                        focusable="false"
                                        viewBox="0 0 24 24"
                                      >
                                        <path
                                          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                                        />
                                      </svg>
                                    </MuiSvgIconRoot>
                                  </ForwardRef(SvgIcon)>
                                </ForwardRef(CloseIcon)>
                                <ForwardRef(TouchRipple)
                                  center={true}
                                >
                                  <MuiTouchRippleRoot
                                    className="MuiTouchRipple-root"
                                  >
                                    <Noop />
                                    <span
                                      className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                                    >
                                      <TransitionGroup
                                        childFactory={[Function]}
                                        component={null}
                                        exit={true}
                                      />
                                    </span>
                                  </MuiTouchRippleRoot>
                                </ForwardRef(TouchRipple)>
                              </button>
                            </MuiButtonBaseRoot>
                          </ForwardRef(ButtonBase)>
                        </MuiIconButtonRoot>
                      </ForwardRef(IconButton)>
                    </div>
                  </MuiGridRoot>
                </ForwardRef(Grid)>
              </div>
            </MuiGridRoot>
          </ForwardRef(Grid)>
        </div>
      </MuiPaperRoot>
    </ForwardRef(Paper)>
  </Styled(ForwardRef(Paper))>
</SelectionAlert>
`;

exports[`SelectionAlert renders correctly after animation finished 1`] = `
<SelectionAlert
  loggedInAnonymously={false}
  marginSide="4px"
  navigateToSelection={[Function]}
  selectedItems={
    Array [
      Object {
        "entityId": 1,
        "entityType": "investigation",
        "id": 1,
        "name": "Test",
        "parentEntities": Array [],
      },
      Object {
        "entityId": 2,
        "entityType": "dataset",
        "id": 1,
        "name": "Test 2",
        "parentEntities": Array [],
      },
      Object {
        "entityId": 3,
        "entityType": "datafile",
        "id": 2,
        "name": "Test 3",
        "parentEntities": Array [],
      },
    ]
  }
  width="100px"
>
  <Styled(ForwardRef(Paper))
    animating={false}
    aria-label="selection-alert"
    onAnimationEnd={[Function]}
    props={
      Object {
        "loggedInAnonymously": false,
        "marginSide": "4px",
        "navigateToSelection": [Function],
        "selectedItems": Array [
          Object {
            "entityId": 1,
            "entityType": "investigation",
            "id": 1,
            "name": "Test",
            "parentEntities": Array [],
          },
          Object {
            "entityId": 2,
            "entityType": "dataset",
            "id": 1,
            "name": "Test 2",
            "parentEntities": Array [],
          },
          Object {
            "entityId": 3,
            "entityType": "datafile",
            "id": 2,
            "name": "Test 3",
            "parentEntities": Array [],
          },
        ],
        "width": "100px",
      }
    }
  >
    <Noop />
    <ForwardRef(Paper)
      aria-label="selection-alert"
      className="css-h5ym14"
      onAnimationEnd={[Function]}
    >
      <MuiPaperRoot
        aria-label="selection-alert"
        as="div"
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-h5ym14"
        onAnimationEnd={[Function]}
        ownerState={
          Object {
            "aria-label": "selection-alert",
            "children": <ForwardRef(Grid)
              container={true}
            >
              <ForwardRef(Grid)
                item={true}
                sx={
                  Object {
                    "alignItems": "center",
                    "flex": "1",
                    "justifyItems": "center",
                    "textAlign": "center",
                  }
                }
              >
                <ForwardRef(Typography)
                  aria-label="selection-alert-text"
                  display="inline"
                >
                  selec_alert.added
                </ForwardRef(Typography)>
                 
                <button
                  aria-label="selection-alert-link"
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "inherit",
                      "border": "none",
                      "color": "#040091",
                      "cursor": "pointer",
                      "fontFamily": "arial, sans-serif",
                      "fontSize": "14px",
                      "padding": "0!important",
                      "textDecoration": "underline",
                    }
                  }
                >
                  selec_alert.link
                </button>
              </ForwardRef(Grid)>
              <ForwardRef(Grid)
                item={true}
              >
                <ForwardRef(IconButton)
                  aria-label="selection-alert-close"
                  color="inherit"
                  onClick={[Function]}
                  size="small"
                >
                  <Memo
                    fontSize="inherit"
                  />
                </ForwardRef(IconButton)>
              </ForwardRef(Grid)>
            </ForwardRef(Grid)>,
            "className": "css-h5ym14",
            "component": "div",
            "elevation": 1,
            "onAnimationEnd": [Function],
            "square": false,
            "variant": "elevation",
          }
        }
      >
        <Noop />
        <div
          aria-label="selection-alert"
          className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1skhnji-MuiPaper-root"
          onAnimationEnd={[Function]}
        >
          <ForwardRef(Grid)
            container={true}
          >
            <MuiGridRoot
              as="div"
              className="MuiGrid-root MuiGrid-container"
              ownerState={
                Object {
                  "children": Array [
                    <ForwardRef(Grid)
                      item={true}
                      sx={
                        Object {
                          "alignItems": "center",
                          "flex": "1",
                          "justifyItems": "center",
                          "textAlign": "center",
                        }
                      }
                    >
                      <ForwardRef(Typography)
                        aria-label="selection-alert-text"
                        display="inline"
                      >
                        selec_alert.added
                      </ForwardRef(Typography)>
                       
                      <button
                        aria-label="selection-alert-link"
                        onClick={[Function]}
                        style={
                          Object {
                            "background": "inherit",
                            "border": "none",
                            "color": "#040091",
                            "cursor": "pointer",
                            "fontFamily": "arial, sans-serif",
                            "fontSize": "14px",
                            "padding": "0!important",
                            "textDecoration": "underline",
                          }
                        }
                      >
                        selec_alert.link
                      </button>
                    </ForwardRef(Grid)>,
                    <ForwardRef(Grid)
                      item={true}
                    >
                      <ForwardRef(IconButton)
                        aria-label="selection-alert-close"
                        color="inherit"
                        onClick={[Function]}
                        size="small"
                      >
                        <Memo
                          fontSize="inherit"
                        />
                      </ForwardRef(IconButton)>
                    </ForwardRef(Grid)>,
                  ],
                  "columnSpacing": 0,
                  "columns": 12,
                  "container": true,
                  "direction": "row",
                  "item": false,
                  "lg": false,
                  "md": false,
                  "rowSpacing": 0,
                  "sm": false,
                  "sx": Object {},
                  "wrap": "wrap",
                  "xl": false,
                  "xs": false,
                  "zeroMinWidth": false,
                }
              }
              sx={Object {}}
            >
              <Noop />
              <div
                className="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
              >
                <ForwardRef(Grid)
                  item={true}
                  sx={
                    Object {
                      "alignItems": "center",
                      "flex": "1",
                      "justifyItems": "center",
                      "textAlign": "center",
                    }
                  }
                >
                  <MuiGridRoot
                    as="div"
                    className="MuiGrid-root MuiGrid-item"
                    ownerState={
                      Object {
                        "children": Array [
                          <ForwardRef(Typography)
                            aria-label="selection-alert-text"
                            display="inline"
                          >
                            selec_alert.added
                          </ForwardRef(Typography)>,
                          " ",
                          <button
                            aria-label="selection-alert-link"
                            onClick={[Function]}
                            style={
                              Object {
                                "background": "inherit",
                                "border": "none",
                                "color": "#040091",
                                "cursor": "pointer",
                                "fontFamily": "arial, sans-serif",
                                "fontSize": "14px",
                                "padding": "0!important",
                                "textDecoration": "underline",
                              }
                            }
                          >
                            selec_alert.link
                          </button>,
                        ],
                        "columnSpacing": 0,
                        "columns": 12,
                        "container": false,
                        "direction": "row",
                        "item": true,
                        "lg": false,
                        "md": false,
                        "rowSpacing": 0,
                        "sm": false,
                        "sx": Object {
                          "alignItems": "center",
                          "flex": "1",
                          "justifyItems": "center",
                          "textAlign": "center",
                        },
                        "wrap": "wrap",
                        "xl": false,
                        "xs": false,
                        "zeroMinWidth": false,
                      }
                    }
                    sx={
                      Object {
                        "alignItems": "center",
                        "flex": "1",
                        "justifyItems": "center",
                        "textAlign": "center",
                      }
                    }
                  >
                    <Noop />
                    <div
                      className="MuiGrid-root MuiGrid-item css-prmyfw-MuiGrid-root"
                    >
                      <ForwardRef(Typography)
                        aria-label="selection-alert-text"
                        display="inline"
                      >
                        <MuiTypographyRoot
                          aria-label="selection-alert-text"
                          as="p"
                          className="MuiTypography-root MuiTypography-body1"
                          ownerState={
                            Object {
                              "align": "inherit",
                              "aria-label": "selection-alert-text",
                              "children": "selec_alert.added",
                              "className": undefined,
                              "color": undefined,
                              "component": undefined,
                              "gutterBottom": false,
                              "noWrap": false,
                              "paragraph": false,
                              "sx": Object {
                                "color": undefined,
                                "display": "inline",
                              },
                              "variant": "body1",
                              "variantMapping": Object {
                                "body1": "p",
                                "body2": "p",
                                "h1": "h1",
                                "h2": "h2",
                                "h3": "h3",
                                "h4": "h4",
                                "h5": "h5",
                                "h6": "h6",
                                "inherit": "p",
                                "subtitle1": "h6",
                                "subtitle2": "h6",
                              },
                            }
                          }
                          sx={
                            Object {
                              "color": undefined,
                              "display": "inline",
                            }
                          }
                        >
                          <Noop />
                          <p
                            aria-label="selection-alert-text"
                            className="MuiTypography-root MuiTypography-body1 css-1sx1eu0-MuiTypography-root"
                          >
                            selec_alert.added
                          </p>
                        </MuiTypographyRoot>
                      </ForwardRef(Typography)>
                       
                      <button
                        aria-label="selection-alert-link"
                        onClick={[Function]}
                        style={
                          Object {
                            "background": "inherit",
                            "border": "none",
                            "color": "#040091",
                            "cursor": "pointer",
                            "fontFamily": "arial, sans-serif",
                            "fontSize": "14px",
                            "padding": "0!important",
                            "textDecoration": "underline",
                          }
                        }
                      >
                        selec_alert.link
                      </button>
                    </div>
                  </MuiGridRoot>
                </ForwardRef(Grid)>
                <ForwardRef(Grid)
                  item={true}
                >
                  <MuiGridRoot
                    as="div"
                    className="MuiGrid-root MuiGrid-item"
                    ownerState={
                      Object {
                        "children": <ForwardRef(IconButton)
                          aria-label="selection-alert-close"
                          color="inherit"
                          onClick={[Function]}
                          size="small"
                        >
                          <Memo
                            fontSize="inherit"
                          />
                        </ForwardRef(IconButton)>,
                        "columnSpacing": 0,
                        "columns": 12,
                        "container": false,
                        "direction": "row",
                        "item": true,
                        "lg": false,
                        "md": false,
                        "rowSpacing": 0,
                        "sm": false,
                        "sx": Object {},
                        "wrap": "wrap",
                        "xl": false,
                        "xs": false,
                        "zeroMinWidth": false,
                      }
                    }
                    sx={Object {}}
                  >
                    <Noop />
                    <div
                      className="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                    >
                      <ForwardRef(IconButton)
                        aria-label="selection-alert-close"
                        color="inherit"
                        onClick={[Function]}
                        size="small"
                      >
                        <MuiIconButtonRoot
                          aria-label="selection-alert-close"
                          centerRipple={true}
                          className="MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall"
                          disabled={false}
                          focusRipple={true}
                          onClick={[Function]}
                          ownerState={
                            Object {
                              "aria-label": "selection-alert-close",
                              "children": <Memo
                                fontSize="inherit"
                              />,
                              "color": "inherit",
                              "disableFocusRipple": false,
                              "disabled": false,
                              "edge": false,
                              "onClick": [Function],
                              "size": "small",
                            }
                          }
                        >
                          <Noop />
                          <ForwardRef(ButtonBase)
                            aria-label="selection-alert-close"
                            centerRipple={true}
                            className="MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall css-8mu34q-MuiIconButton-root"
                            disabled={false}
                            focusRipple={true}
                            onClick={[Function]}
                          >
                            <MuiButtonBaseRoot
                              aria-label="selection-alert-close"
                              as="button"
                              className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall css-8mu34q-MuiIconButton-root"
                              disabled={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onContextMenu={[Function]}
                              onDragLeave={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseLeave={[Function]}
                              onMouseUp={[Function]}
                              onTouchEnd={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              ownerState={
                                Object {
                                  "aria-label": "selection-alert-close",
                                  "centerRipple": true,
                                  "children": <Memo
                                    fontSize="inherit"
                                  />,
                                  "className": "MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall css-8mu34q-MuiIconButton-root",
                                  "component": "button",
                                  "disableRipple": false,
                                  "disableTouchRipple": false,
                                  "disabled": false,
                                  "focusRipple": true,
                                  "focusVisible": false,
                                  "onClick": [Function],
                                  "tabIndex": 0,
                                }
                              }
                              tabIndex={0}
                              type="button"
                            >
                              <Noop />
                              <button
                                aria-label="selection-alert-close"
                                className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall css-1e0d89p-MuiButtonBase-root-MuiIconButton-root"
                                disabled={false}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onContextMenu={[Function]}
                                onDragLeave={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                onKeyUp={[Function]}
                                onMouseDown={[Function]}
                                onMouseLeave={[Function]}
                                onMouseUp={[Function]}
                                onTouchEnd={[Function]}
                                onTouchMove={[Function]}
                                onTouchStart={[Function]}
                                tabIndex={0}
                                type="button"
                              >
                                <ForwardRef(CloseIcon)
                                  fontSize="inherit"
                                >
                                  <ForwardRef(SvgIcon)
                                    data-testid="CloseIcon"
                                    fontSize="inherit"
                                  >
                                    <MuiSvgIconRoot
                                      aria-hidden={true}
                                      as="svg"
                                      className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                                      data-testid="CloseIcon"
                                      focusable="false"
                                      ownerState={
                                        Object {
                                          "children": <path
                                            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                                          />,
                                          "color": "inherit",
                                          "component": "svg",
                                          "data-testid": "CloseIcon",
                                          "fontSize": "inherit",
                                          "inheritViewBox": false,
                                          "viewBox": "0 0 24 24",
                                        }
                                      }
                                      viewBox="0 0 24 24"
                                    >
                                      <Noop />
                                      <svg
                                        aria-hidden={true}
                                        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                                        data-testid="CloseIcon"
                                        focusable="false"
                                        viewBox="0 0 24 24"
                                      >
                                        <path
                                          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                                        />
                                      </svg>
                                    </MuiSvgIconRoot>
                                  </ForwardRef(SvgIcon)>
                                </ForwardRef(CloseIcon)>
                                <ForwardRef(TouchRipple)
                                  center={true}
                                >
                                  <MuiTouchRippleRoot
                                    className="MuiTouchRipple-root"
                                  >
                                    <Noop />
                                    <span
                                      className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                                    >
                                      <TransitionGroup
                                        childFactory={[Function]}
                                        component={null}
                                        exit={true}
                                      />
                                    </span>
                                  </MuiTouchRippleRoot>
                                </ForwardRef(TouchRipple)>
                              </button>
                            </MuiButtonBaseRoot>
                          </ForwardRef(ButtonBase)>
                        </MuiIconButtonRoot>
                      </ForwardRef(IconButton)>
                    </div>
                  </MuiGridRoot>
                </ForwardRef(Grid)>
              </div>
            </MuiGridRoot>
          </ForwardRef(Grid)>
        </div>
      </MuiPaperRoot>
    </ForwardRef(Paper)>
  </Styled(ForwardRef(Paper))>
</SelectionAlert>
`;
